@@ -1,3 +1,14 @@
+2005-09-02  Ben Maurer  <bmaurer@ximian.com>
+
+	* sample/NodeViewDemo.cs: take advantage of the stuff below
+
+	* gtk/TreeNodeValueAttribute.cs: Allow on props
+
+	* gtk/TreeNodeAttribute.cs: Obsolete column count
+
+	* gtk/NodeStore.cs: Change this to not need the TreeNodeAttribute
+	column count. Handle fields as well as properties.
+
 2005-08-30  Mike Kestner  <mkestner@novell.com>
 
 	* gdk/Event.cs : add some null guarding to GetEvent.
